--- a/html/projects/video-games/pokemon-memory.html
+++ b/html/projects/video-games/pokemon-memory.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Alvina DR - Portfolio | Pokemon memory</title>
+    <title>Alvina DR | Pokemon memory</title>
 
     <link rel="stylesheet" href="../../../css/main.css">
     <link rel="stylesheet" href="../../../css/text.css">
@@ -50,12 +50,24 @@
             </div>
     </section>
 
+    <section class="div-row other-projects">
+        <button id='left-project-button' class="next-project-button">◄</button>
+        <div style="width: 50%; height: 100%; display: flex; justify-content: center; align-items: center;">
+            <p id="left-project" class="next-project-title">Project1</p>
+        </div>
+        <div style="width: 50%;  height: 100%; display: flex; justify-content: center; align-items: center;">
+            <p id="right-project" class="next-project-title">Project2</p>
+        </div>
+        <button id='right-project-button' class="next-project-button" style="background: linear-gradient(to left, var(--secondary-color), var(--background-color));">►</button>
+    </section>
+
     <!-- FOOTER -->
     <footer>
         <div class="grid grid-footer"></div>
         <p>Made by Alvina Damasio--Razafiarizaka</p>
     </footer>
     <script src="../../../js/mouse-cursor.js"></script>
-
+    <script src="../../../data/video-games.js"></script>
+    <script src="../../../js/next-vg.js"></script>
 </body>
 </html>
