rework space bottom page

--- a/html/projects/video-games/chase-tag.html
+++ b/html/projects/video-games/chase-tag.html
@@ -42,7 +42,7 @@
                 <a class="btn1" href="https://alvina-dr.itch.io/chase-tag-online" target="_blank">Discover the game</a>
       </div>
             <div class="div-column" style="width: 60%; margin-left : 10px;">
-                <img src="../../../img/video-games/chase-tag/ct-gameplay1.gif"><br>
+                <img src="../../../img/video-games/chase-tag/ct-gameplay1.gif">
             </div>
     </section>
 
