--- a/html/projects/video-games/golden-pumpkin.html
+++ b/html/projects/video-games/golden-pumpkin.html
@@ -50,9 +50,8 @@
                 <p>Golden Pumpkin is a tower-defense game that alterns between two phases, one where you can spend sweets to upgrade your hut or buy special attack and the other where you need to resist the ennemies assault (other children are trying to steal your treasure !).</p><br>
                 <p>This game is available on android, windows and mac if you want to try it !</p><br>
                 <a class="btn1" href="https://wolffien.itch.io/golden-pumpkin" target="_blank">Discover the game</a>
-        
             </div>
-    </section>
+    </section><br>
 
     <section class="div-row other-projects">
         <button id='left-project-button' class="next-project-button">◄</button>
