--- a/html/projects/video-games/sandwalkers.html
+++ b/html/projects/video-games/sandwalkers.html
@@ -53,7 +53,7 @@
                 <p>It was pretty exciting working on a game like that, with lots of people, a community behind it and I can't wait to see the final game with my own eyes !</p><br>
                 <a class="btn1" href="https://store.steampowered.com/app/1639080/Sandwalkers/" target="_blank">Discover the game</a>
             </div>
-    </section>
+    </section><br>
 
     <section class="div-row other-projects">
         <button id='left-project-button' class="next-project-button">◄</button>
