scroll text modif to underline gameplay programming

--- a/html/about.html
+++ b/html/about.html
@@ -71,10 +71,10 @@
         <div class="scroll-text-div">
             <div style="width: 10000000px">
                 <div class="scroll-text" >
-                    <h5>&nbsp;GAMEPLAY PROGRAMMING . LEVEL DESIGN . PHOTOMONTAGE . PHOTOGRAPHY . WEB DEVELOPMENT . STORYTELLING .</h5>
+                    <h5>&nbsp;<span>GAMEPLAY PROGRAMMING</span> . GAME DESIGN . CONCEPT ART . PHOTOGRAPHY . WEB DEVELOPMENT .</h5>
                 </div>
                 <div class="scroll-text">
-                    <h5>&nbsp;GAMEPLAY PROGRAMMING . LEVEL DESIGN . PHOTOMONTAGE . PHOTOGRAPHY . WEB DEVELOPMENT . STORYTELLING .</h5>
+                    <h5>&nbsp;<span>GAMEPLAY PROGRAMMING</span> . GAME DESIGN . CONCEPT ART . PHOTOGRAPHY . WEB DEVELOPMENT .</h5>
                 </div>
             </div>
     
