click system in video game is better + fix navlink pixel staying in

--- a/html/projects/video-games.html
+++ b/html/projects/video-games.html
@@ -12,10 +12,13 @@
     <link rel="stylesheet" href="../../css/footer.css">
     <link rel="stylesheet" href="../../css/page-specific-project.css">
     <link rel="stylesheet" href="../../css/page-video-game.css">
-
+    <link rel="stylesheet" href="../../css/pointer.css">
 </head>
 <body>
     <div class="cursor-default cursor-hidden"></div>
+    <div class="mail-div" id="text-cursor">
+        <p id="text-to-copy">Have a look•Have a look•</p>
+    </div>
 
     <!-- NAVBAR -->
     <div class="grid grid-header"></div>
@@ -56,6 +59,7 @@
     <script src="../../js/video-game-system.js"></script>
     <script src="../../js/mouse-cursor.js"></script>
     <script src="../../js/filter-games.js"></script>
+    <script src="../../js/circle-text.js"></script>
 
 </body>
 </html>
