--- a/html/projects/video-games/eba-effect.html
+++ b/html/projects/video-games/eba-effect.html
@@ -12,6 +12,7 @@
     <link rel="stylesheet" href="../../../css/footer.css">
     <link rel="stylesheet" href="../../../css/page-specific-project.css">
     <link rel="stylesheet" href="../../../css/page-specific-project.css">
+    <link rel="stylesheet" href="../../../css/pointer.css">
 </head>
 <body>
     <div class="cursor-default cursor-hidden"></div>
