--- a/html/contact.html
+++ b/html/contact.html
@@ -13,6 +13,7 @@
     <link rel="stylesheet" href="../css/page-index.css">
     <link rel="stylesheet" href="../css/project-window.css">
     <link rel="stylesheet" href="../css/page-contact.css">
+    <link rel="stylesheet" href="../css/pointer.css">
 </head>
 <body>
     <div class="cursor-default cursor-hidden"></div>
