--- a/html/projects/video-games/protectors-of-pomelo.html
+++ b/html/projects/video-games/protectors-of-pomelo.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="../../../css/navbar.css">
     <link rel="stylesheet" href="../../../css/footer.css">
     <link rel="stylesheet" href="../../../css/page-specific-project.css">
-
+    <link rel="stylesheet" href="../../../css/pointer.css">
 </head>
 <body>
     <div class="cursor-default cursor-hidden"></div>
