--- a/html/projects/video-games/those-who-remain.html
+++ b/html/projects/video-games/those-who-remain.html
@@ -11,6 +11,8 @@
     <link rel="stylesheet" href="../../../css/navbar.css">
     <link rel="stylesheet" href="../../../css/footer.css">
     <link rel="stylesheet" href="../../../css/page-specific-project.css">
+    <link rel="stylesheet" href="../../../css/pointer.css">
+
 
 </head>
 <body>
