--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="css/footer.css">
     <link rel="stylesheet" href="css/project-window.css">
     <link rel="stylesheet" href="css/page-index.css">
-
+    <link rel="stylesheet" href="css/pointer.css">
 </head>
 <body>
 
