Started Blog and Added New Projects

--- a/html/projects/photomontage.html
+++ b/html/projects/photomontage.html
@@ -27,11 +27,11 @@
     </navbar>  
     
     <div class="grid grid-photomontage-1"></div>
-    <section id="landing-section">
+    <!-- <section id="landing-section">
         <h1>Alvina</h1>
         <p>2022</p>
         <br>
-    </section>
+    </section> -->
 
 <!------------------------------------------------------ PHOTOMONTAGES -------------------------------------------->
 
