--- a/html/projects/video-games.html
+++ b/html/projects/video-games.html
@@ -32,8 +32,8 @@
     
     <div class="grid grid-video-game-1"></div>
     <section id="landing-section">
-        <h1>Alvina</h1>
-        <p>2022</p>
+        <!-- <h1>Alvina</h1>
+        <p>2022</p> -->
         <br>
     </section>
 
