--- a/html/projects/video-games/protectors-of-pomelo.html
+++ b/html/projects/video-games/protectors-of-pomelo.html
@@ -12,13 +12,14 @@
     <link rel="stylesheet" href="../../../css/footer.css">
     <link rel="stylesheet" href="../../../css/page-specific-project.css">
     <link rel="stylesheet" href="../../../css/pointer.css">
+    <link rel="stylesheet" href="../../../css/blog.css">
 </head>
 <body>
     <div class="cursor-default cursor-hidden"></div>
 
     <!-- NAVBAR -->
-    <div class="grid grid-header"></div>
-    <navbar>
+    <div class="grid grid-header grid-navbar-blog"></div>
+    <navbar id="blog-navbar">
         <ul class="nav-ul">
             <li class="nav-link"><a href="../../../index.html">Home</a></li>
             <li class="nav-link"><a href="../../about.html">About</a></li>
@@ -26,18 +27,16 @@
         </ul>
     </navbar>  
     
-    <div class="grid grid-pop"></div>
-    <section id="landing-section">
-        <h1>Alvina</h1>
-        <p>2022</p>
-        <br>
+    <div class="grid grid-blog"></div>
+    <section id="landing-blog-section">
+        <h1>Protectors of Pomelo</h1>
     </section>
 
 <!------------------------------------------------------ PHOTOMONTAGES -------------------------------------------->
 
-    <section id="vg-section" class="div-row">
+    <section id="blog-section" class="div-row">
             <div class="div-column">
-                <h3>Protectors of pomelo</h3>
+                <p><b>#Unity</b> <b>#DOTween</b> <b>#Odin Inspector</b></p><br>
                 <p>When I started my internship at TavroxGames I first worked on the prototype of a game named Protectors of pomelo. It's a tower defense game on the theme of Polynesian islands in the Pacific.</p><br>
                 <img src="../../../img/video-games/protectors-of-pomelo/pop-gameplay2.gif" style="width: 100%;"><br>
 
@@ -70,7 +69,7 @@
 
     <!-- FOOTER -->
     <footer>
-        <div class="grid grid-footer"></div>
+        <div class="grid grid-footer grid-footer-blog"></div>
         <p>Made by Alvina Damasio--Razafiarizaka</p>
     </footer>
     <script src="../../../js/mouse-cursor.js"></script>
