--- a/html/projects/video-games/those-who-remain.html
+++ b/html/projects/video-games/those-who-remain.html
@@ -12,15 +12,14 @@
     <link rel="stylesheet" href="../../../css/footer.css">
     <link rel="stylesheet" href="../../../css/page-specific-project.css">
     <link rel="stylesheet" href="../../../css/pointer.css">
-
-
+    <link rel="stylesheet" href="../../../css/blog.css">
 </head>
 <body>
     <div class="cursor-default cursor-hidden"></div>
 
     <!-- NAVBAR -->
-    <div class="grid grid-header"></div>
-    <navbar>
+    <div class="grid grid-header grid-navbar-blog"></div>
+    <navbar id="blog-navbar">
         <ul class="nav-ul">
             <li class="nav-link"><a href="../../../index.html">Home</a></li>
             <li class="nav-link"><a href="../../about.html">About</a></li>
@@ -28,18 +27,15 @@
         </ul>
     </navbar>  
     
-    <div class="grid grid-those-who-remain"></div>
-    <section id="landing-section">
-        <h1>Alvina</h1>
-        <p>2022</p>
-        <br>
+    <div class="grid grid-blog"></div>
+    <section id="landing-blog-section">
+        <h1>Those Who Remain</h1>
     </section>
 
 <!------------------------------------------------------ PHOTOMONTAGES -------------------------------------------->
 
-    <section id="vg-section" class="div-row">
+    <section id="blog-section" class="div-row">
             <div class="div-column">
-                <h3>Those who remain</h3>
                 <p>This new game main objective was accessibility. It needed to be playable without sight or/and without hearing. The controls also had to be simple. With my team, we decided to make a Subway-surfer-like in 2D.</p><br>
                 <p>It was the first time I programed a whole game by myself. I also took care of the level design and the integration of all elements in Unity. The other members of the team either looked for graphic assets online or designed their own to make the backgrounds (the road that goes by), the main character Miraï, the obstacles and the UI elements in the menu. Adrien Dumont did the whole sound design of the game, which was really important for visually impaired and nonsighted people.</p><br>                
                 <div class="div-row" style="width: 100%;">
@@ -77,7 +73,7 @@
 
     <!-- FOOTER -->
     <footer>
-        <div class="grid grid-footer"></div>
+        <div class="grid grid-footer grid-footer-blog"></div>
         <p>Made by Alvina Damasio--Razafiarizaka</p>
     </footer>
     <script src="../../../js/mouse-cursor.js"></script>
