--- a/html/projects/video-games/chase-tag.html
+++ b/html/projects/video-games/chase-tag.html
@@ -12,13 +12,14 @@
     <link rel="stylesheet" href="../../../css/footer.css">
     <link rel="stylesheet" href="../../../css/page-specific-project.css">
     <link rel="stylesheet" href="../../../css/pointer.css">
+    <link rel="stylesheet" href="../../../css/blog.css">
 </head>
 <body>
     <div class="cursor-default cursor-hidden"></div>
 
     <!-- NAVBAR -->
-    <div class="grid grid-header"></div>
-    <navbar>
+    <div class="grid grid-header grid-navbar-blog"></div>
+    <navbar id="blog-navbar">
         <ul class="nav-ul">
             <li class="nav-link"><a href="../../../index.html">Home</a></li>
             <li class="nav-link"><a href="../../about.html">About</a></li>
@@ -26,18 +27,16 @@
         </ul>
     </navbar>  
     
-    <div class="grid grid-chase-tag"></div>
-    <section id="landing-section">
-        <h1>Alvina</h1>
-        <p>2022</p>
-        <br>
+    <div class="grid grid-blog" style="height: calc(3vw * 10 + .1em);"></div>
+    <section id="landing-blog-section">
+        <h1>Chase Tag</h1>
     </section>
 
 <!------------------------------------------------------ PHOTOMONTAGES -------------------------------------------->
 
-    <section id="vg-section" class="div-row">
+    <section id="blog-section" class="div-row">
             <div class="div-column">
-                <h3>Chase tag</h3>
+                <p><b>#Unity</b> <b>#Photon Unity Networking 2</b></p><br>
                 <p>At the start of october 2022 I started making an online chase tag game after work. I had wanted to learn about multiplayer for a long time and suddendly felt like it was possible with my current knowledge. It worked pretty well pretty quickly so I started talking with a friend and we created some rules to make it funny. This game is still a work in progress but you can try a prototype by clicking on the button below !</p><br>
                 <a class="btn1" href="https://alvina-dr.itch.io/chase-tag-online" target="_blank">Discover the game</a>
       </div>
@@ -59,7 +58,7 @@
 
     <!-- FOOTER -->
     <footer>
-        <div class="grid grid-footer"></div>
+        <div class="grid grid-footer grid-footer-blog"></div>
         <p>Made by Alvina Damasio--Razafiarizaka</p>
     </footer>
     <script src="../../../js/mouse-cursor.js"></script>
