--- a/html/projects/video-games/find-the-way-back.html
+++ b/html/projects/video-games/find-the-way-back.html
@@ -12,13 +12,14 @@
     <link rel="stylesheet" href="../../../css/footer.css">
     <link rel="stylesheet" href="../../../css/page-specific-project.css">
     <link rel="stylesheet" href="../../../css/pointer.css">
+    <link rel="stylesheet" href="../../../css/blog.css">
 </head>
 <body>
     <div class="cursor-default cursor-hidden"></div>
 
     <!-- NAVBAR -->
-    <div class="grid grid-header"></div>
-    <navbar>
+    <div class="grid grid-header grid-navbar-blog"></div>
+    <navbar id="blog-navbar">
         <ul class="nav-ul">
             <li class="nav-link"><a href="../../../index.html">Home</a></li>
             <li class="nav-link"><a href="../../about.html">About</a></li>
@@ -26,18 +27,16 @@
         </ul>
     </navbar>  
     
-    <div class="grid grid-ftwb"></div>
-    <section id="landing-section">
-        <h1>Alvina</h1>
-        <p>2022</p>
-        <br>
+    <div class="grid grid-blog"></div>
+    <section id="landing-blog-section">
+        <h1>Find the Way Back</h1>
     </section>
 
 <!------------------------------------------------------ PHOTOMONTAGES -------------------------------------------->
 
-    <section id="vg-section" class="div-row">
+    <section id="blog-section" class="div-row">
             <div class="div-column">
-                <h3>Find the way back</h3>
+                <p><b>#Unity</b></p><br>
                 <p>This game was made in a week-end, followed by two long weeks of debug. A friend of mine had the idea to make our own game jam at home and we made the whole thing in the apartment I had at the time in Bordeaux. It was a beautiful experience, we had fun, sore backs and were giddy with Monster by the end of the first night. I remember trying to make the walking system work for fourteen hours ! At the time I didn't knew that you could use the grid to plan your movement and there was a big conflict between how physics work in Unity and how I had made it all. A good night of sleep later, it was done in one hour. Which I guess is one of the lessons that I got to experience time and time again since then : if you can't do it now, stop for today and try again tomorrow.</p><br>
                 <p>The theme of the jam was "soédiv xuej" which would translate as "emag oediv" in english. Which is litteraly video game backward. So we had a lot of thinking about mirror and beginning and ending. Which left us with Find The Way Back.</p><br>
                 <p>It's a puzzle game where you control two reflection of the same character. When one moves right, the other moves left. The goal of the game is to bring the two characters to the ending slates to complete the level. The game in itself is pretty simple but the levels can be quite complex.</p><br>
@@ -71,7 +70,7 @@
 
     <!-- FOOTER -->
     <footer>
-        <div class="grid grid-footer"></div>
+        <div class="grid grid-footer grid-footer-blog"></div>
         <p>Made by Alvina Damasio--Razafiarizaka</p>
     </footer>
     <script src="../../../js/mouse-cursor.js"></script>
