--- a/html/projects/video-games/golden-pumpkin.html
+++ b/html/projects/video-games/golden-pumpkin.html
@@ -12,13 +12,14 @@
     <link rel="stylesheet" href="../../../css/footer.css">
     <link rel="stylesheet" href="../../../css/page-specific-project.css">
     <link rel="stylesheet" href="../../../css/pointer.css">
+    <link rel="stylesheet" href="../../../css/blog.css">
 </head>
 <body>
     <div class="cursor-default cursor-hidden"></div>
 
     <!-- NAVBAR -->
-    <div class="grid grid-header"></div>
-    <navbar>
+    <div class="grid grid-header grid-navbar-blog"></div>
+    <navbar id="blog-navbar">
         <ul class="nav-ul">
             <li class="nav-link"><a href="../../../index.html">Home</a></li>
             <li class="nav-link"><a href="../../about.html">About</a></li>
@@ -26,18 +27,16 @@
         </ul>
     </navbar>  
     
-    <div class="grid grid-golden-pumpkin"></div>
-    <section id="landing-section">
-        <h1>Alvina</h1>
-        <p>2022</p>
-        <br>
+    <div class="grid grid-blog"></div>
+    <section id="landing-blog-section">
+        <h1>Golden Pumpkin</h1>
     </section>
 
 <!------------------------------------------------------ PHOTOMONTAGES -------------------------------------------->
 
-    <section id="vg-section" class="div-row">
+    <section id="blog-section" class="div-row">
             <div class="div-column">
-                <h3>Golden pumpkin</h3>
+                <p><b>#Unity</b> <b>#Android</b></p><br>
                 <p>In October 2021, we had two weeks to realise a video game on the theme of Halloween. The first week, as we were building the foundations of our game, we learned the basics of UML modelisation (in our case, how to conceive class diagrams, transition state diagrams). This game was made on Unity. We were five per groups and I was mainly focusing on the C# development.</p><br>
                 <p>Now imagine yourself on the evening of Halloween in a small town that every year organise a contest for the kid with the most sweets in the city (winner's price being a beautiful golden pumpkin). As the dignified heir of your grandmother, ten times winner in her youth, you need to be the best.</p><br>
                 <div class="div-row" style="width: 100%;">
@@ -66,7 +65,7 @@
 
     <!-- FOOTER -->
     <footer>
-        <div class="grid grid-footer"></div>
+        <div class="grid grid-footer grid-footer-blog"></div>
         <p>Made by Alvina Damasio--Razafiarizaka</p>
     </footer>
     <script src="../../../js/mouse-cursor.js"></script>
