--- a/html/projects/video-games/hfc.html
+++ b/html/projects/video-games/hfc.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Alvina DR | Creeping deck : Pharaoh's curse</title>
+    <title>Alvina DR | Hall Family's Christmas</title>
 
     <link rel="stylesheet" href="../../../css/main.css">
     <link rel="stylesheet" href="../../../css/text.css">
@@ -27,28 +27,32 @@
         </ul>
     </navbar>  
     
-    <div class="grid grid-blog" style="height: calc(3vw * 23 + .1em); "></div>
+    <div class="grid grid-blog"></div>
     <section id="landing-blog-section">
-        <h1>Creeping Deck</h1>
+        <h1>Hall Family's Christmas</h1>
     </section>
 
 <!------------------------------------------------------ PHOTOMONTAGES -------------------------------------------->
 
     <section id="blog-section" class="div-row">
             <div class="div-column" style="width: 70%;">
-                <p><b>#Unity</b> <b>#DOTween</b> <b>#Odin Inspector</b></p><br>
-                <p>To start off my apprenticeship at TavroxGames, I had the occasion to work on Creeping deck : Pharaoh's curse, a deckbuilding game on the theme of Egyptian mythology. I only worked three weeks on the project, mainly on FX. Things such as a text indicating the number of damage popping on the screen, the chest opening or the arrow following the mouse in fight. I also worked on making it possible to have multiple ennemies in fight.</p><br>
-                <div class="div-row" style="width: 100%;">
-                    <img src="../../../img/video-games/creeping-deck/cd-arrow.gif" style="width: 49%;">
-                    <img src="../../../img/video-games/creeping-deck/cd-fight.gif" style="width: 49%;">
-                </div><br>
-                <img src="../../../img/video-games/creeping-deck/cd-chest.gif"><br>
+                <p><b>#Walking Simulator</b> <b>#Narrative Design</b></p><br>
+                <p>The final project of our vocational degree at MIAMI was to make a walking simulator in Unreal Engine. We had two months to familiarize ourselves with the software, think through the story, level design and the message we wanted to convey. This was the occasion to work in larger groups than usual (six people) and to learn a lot more about team work and management.</p><br>
+                <p>Inspired by <a>Life Is Strange</a>, <a>What Remains of Edith Finch</a> and <a>Doki Doki Literature Club</a>, our game talks about privacy on the Internet and cybersecurity (under the guise of a Christmas ).</p>
 
+                <h3>Accessibility</h3>
+                <p>One of the main focus of our game was accessiblity : we wanted to make it pleasant to play for the most people possible. First of all, we implemented control remapping and gamepad compatibility. </p><br>
+
+                <p></p>
+
+                <iframe width="100%" height="450" src="https://www.youtube.com/embed/dvhsVfpaxz0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe><br>
+                <iframe width="100%" height="450" src="https://www.youtube.com/embed/XMzAdImk-UU" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe><br>
+                <iframe width="100%" height="450" src="https://www.youtube.com/embed/ETVf-kdi2EM" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe><br>
+                <iframe width="100%" height="450" src="https://www.youtube.com/embed/ZHoMSfKOjQ8" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
       </div>
             <div class="div-column" style="width: 30%; margin-left : 10px;">
-                <p>1month / 2022-23, computer, Professional, </p>
-                <p>Tools : Unity, Blender, DOTween</p><br>
-                <a class="btn1" href="https://store.steampowered.com/app/2167550/Creeping_Deck_Pharaohs_Curse/" target="_blank">Discover the game</a>
+                <p>Unreal Engine 5, Blender</p>
+                <a class="btn1" href="https://alvina-dr.itch.io/hall-familys-christmas" target="_blank">Discover the game</a>
 
             </div>
     </section>
